# oss4energy

./: .gitignore  README.md  app.py  install_docker.sh  listings_index.toml  makefile  pyproject.toml  repo_index.toml  script.py  script_generate_data.py  script_generate_index.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: data_update.yaml  pull_request.yaml
notebooks/: repo_classification.ipynb
scripts/: cli.py  generate_data.py  generate_index.py  publish_datasets.py  run_check_in_docker.py
src/: pyproject.toml
src/app/: README.md  __init__.py
src/app/static/css/: styles.css
src/app/templates/: _base.html  _navbar.html  about.html  base.html  navbar.html  results.html  search.html
src/oss4climate/: cli.py
src/oss4climate/scripts/: __init__.py  data_publication.py  discover_new_sources.py  listing_search.py  repository_scraping.py
src/oss4climate/src/: log.py  model.py
src/oss4climate/src/database/: __init__.py
src/oss4climate/src/nlp/: search.py  search_engine.py
src/oss4climate/src/parsers/: __init__.py  github_data_io.py  gitlab_data_io.py  lfenergy.py  listings.py  opensustain_tech.py
src/oss4energy/: cli.py  config.py  github_data_io.py  helpers.py  model.py
src/oss4energy/database/: __init__.py
src/oss4energy/nlp/: __init__.py  classifiers.py  markdown_io.py  search.py
src/oss4energy/parsers/: __init__.py  github_data_io.py  lfenergy.py  opensustain_tech.py
src/oss4energy/scripts/: __init__.py  data_publication.py  discover_new_sources.py  listing_search.py
src/oss4energy/src/: config.py  log.py  model.py
src/oss4energy/src/database/: __init__.py
src/oss4energy/src/nlp/: markdown_io.py  search.py  search_engine.py
src/oss4energy/src/parsers/: __init__.py  github_data_io.py  githubs_green_software_directory.py  gitlab_data_io.py  lfenergy.py  listings.py  misc.py  opensustain_tech.py
src/oss4energy/test/: conftest.py  test_github_data_io.py
src/test/: conftest.py  test_github_data_io.py  test_gitlab_data_io.py  test_imports.py
