[tool.poetry]
name = "oss4energy"
version = "0.0.0"
description = "Package to create listings of Open Source for Energy"
authors = ["Pierre VF"]
packages = [
    {include = "oss4energy", from = "src"}
]
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.0"
pydantic-settings = "^2.4.0"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
tomlkit = "^0.13.2"
sqlmodel = "^0.0.22"
black = "^24.8.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"