[project]
name = "oss4climate"
version = "0.1.0"
requires-python = ">=3.12"
description = "Package to create listings of Open Source for Energy"
readme = "README.md"
authors = ["Pierre VF"]
packages = [
    {include = "oss4climate", from = "src"}
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "black>=24.10.0",
    "fastapi>=0.115.3",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.4",
    "markdown>=3.7",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.6.0",
    "pytest>=8.3.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.7.0",
    "scikit-learn>=1.5.2",
    "spacy>=3.8.2",
    "sqlmodel>=0.0.22",
    "tomlkit>=0.13.2",
    "typer>=0.12.5",
    "uvicorn>=0.32.0",
]
[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.2",
]
